fix: these fields are optional by design, only what has been changed is rendered
